--- a/signin/index.html
+++ b/signin/index.html
@@ -8,14 +8,14 @@
 	<meta property="og:site_name" content="Heropy Coffee" />
 	<meta property="og:title" content="Heropy Coffee Landing" />
 	<meta property="og:description" content="헤로피커피는 세계에서 가장 큰 다국적 커피 전문점으로, 64개국에서 총 23,187개의 매점을 운영하고 있습니다." />
-	<meta property="og:image" content="./images/for_seo.jpg" />
+	<meta property="og:image" content="../images/for_seo.jpg" />
 	<meta property="og:url" content="https://epic-darwin-271c77.netlify.app" />
 	<!-- Twitter Cards -->
 	<meta property="twitter:card" content="summary" />
 	<meta property="twitter:site" content="Heropy Coffeee" />
 	<meta property="twitter:title" content="Heropy Coffee Landing" />
 	<meta property="twitter:description" content="헤로피커피는 세계에서 가장 큰 커피 전문점으로, 64개국에서 총 23,187개의 매점을 운영하고 있습니다." />
-	<meta property="twitter:image" content="./images/for_seo.jpg" />
+	<meta property="twitter:image" content="../images/for_seo.jpg" />
 	<meta property="twitter:url" content="https://epic-darwin-271c77.netlify.app" />
 	<title>Heropy Coffee</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
@@ -24,21 +24,21 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="../css/main.css">
 	<link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
 	<script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js" integrity="sha512-H6cPm97FAsgIKmlBA4s774vqoN24V5gSQL4yBTDOY2su2DeXZVhQPxFK4P6GPdnZqM9fg1G3cMv5wD7e6cFLZQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollToPlugin.min.js" integrity="sha512-agNfXmEo6F+qcj3WGryaRvl9X9wLMQORbTt5ACS9YVqzKDMzhRxY+xjgO45HCLm61OwHWR1Oblp4QSw/SGh9SA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js" integrity="sha512-8E3KZoPoZCD+1dgfqhPbejQBnQfBXe8FuwL4z/c8sTrgeDMFEnoyTlH3obB4/fV+6Sg0a0XF+L/6xS4Xx1fUEg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-	<script defer src="./js/youtube.js"></script>
-	<script defer src="./js/main.js"></script>
+	<script defer src="../js/youtube.js"></script>
+	<script defer src="../js/main.js"></script>
 </head>
 <body>
   <!-- HEADER-->
 	<header>
 		<div class="inner">
 			<a href="/" class="logo">
-				<img src="./images/logo.png" alt="Heropy Coffee" />
+				<img src="../images/logo.png" alt="Heropy Coffee" />
 			</a>
 			<div class="sub-menu">
 				<ul class="menu">
@@ -359,282 +359,5 @@
 				</li>
 			</ul>
 		</div>
-		<!--BADGES-->
-		<div class="badges">
-			<div class="badge">
-				<img src="./images/badge3.jpg" alt="Badge" />
-			</div>
-			<div class="badge">
-				<img src="./images/badge2.jpg" alt="Badge" />
-			</div>
-		</div>
 	</header>
-
-		<!--VISUAL-->
-		<section class="visual">
-			<div class="inner">
-				<div class="title fade-in">
-					<img src="./images/visual_title.png" alt="DELIGHTFUL START TO THE YEARS" />
-					<a href="javascript:void(0)" class="btn btn--brown">자세히 보기</a>
-				</div>
-				<div class="fade-in">
-					<img src="./images/visual_cup1.png" alt="Cup1" class="cup1 image" />
-					<img src="./images/visual_cup1_text.png" alt="헤이즐넛 아메리카노" class="cup1 text">
-				</div>
-				<div class="fade-in">
-					<img src="./images/visual_cup2.png" alt="Cup2" class="cup2 image" />
-					<img src="./images/visual_cup2_text.png" alt="카라멜 크림블 모카" class="cup2 text">
-				</div>
-				<div class="fade-in">
-					<img src="./images/visual_spoon.png" alt="Spoon" class="spoon" />
-				</div>
-			</div>
-		</section>
-	<!--NOTICE-->
-	<section class="notice">
-		<div class="bg-left"></div>
-		<div class="bg-right"></div>
-		<div class="inner">
-			<div class="inner__left">
-				<h2>공지사항</h2>
-				<div class="swiper">
-					<div class="swiper-wrapper">
-						<div class="swiper-slide">
-							<a href="javascript:void(0)">크리스마스 & 연말연시 매장 영업시간 변경 안내</a>
-						</div>
-						<div class="swiper-slide">
-							<a href="javascript:void(0)">[당첨자 발표] 커피 영수증 이벤트</a>
-						</div>
-						<div class="swiper-slide">
-							<a href="javascript:void(0)">애플리케이션 버전 업데이트 안내</a>
-						</div>
-						<div class="swiper-slide">
-							<a href="javascript:void(0)">[당첨자 발표] 전자영수증 이벤트</a>
-						</div>
-					</div>
-				</div>
-				<div class="swiper"></div>
-				<a href="javascript:void(0)" class="notice-more">
-					<span class="material-icons">add_circle</span>
-				</a>
-			</div>
-			<div class="inner__right">
-				<h2>커피 프로모션</h2>
-				<div class="toggle-promotion">
-					<div class="material-icons">upload</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!--PROMOTION-->
-	<section class="promotion">
-		<div class="swiper">
-			<div class="swiper-wrapper">
-				<div class="swiper-slide">
-					<img src="./images/promotion_slide1.jpg" alt="온라인 샵 런칭 기념, 민트 초코 브라우니 무료! 기간: 2023년 3월 3일 ~ 2023년 3월 31일" />
-					<a href="javascript:void(0)" class="btn">자세히 보기</a>
-				</div>
-				<div class="swiper-slide">
-					<img src="./images/promotion_slide2.jpg" alt="뉴이어, 헤로피 커피와 함께 즐겁고 활기차게 시작하세요! 기간: 2023년 1월 1일 ~ 2월 14일" />
-					<a href="javascript:void(0)" class="btn">자세히 보기</a>
-				</div>
-				<div class="swiper-slide">
-					<img src="./images/promotion_slide3.jpg" alt="따뜻한 아메리카노를 주문하면, 달콤한 초코칩 쿠키 1+1 기간: 2025년 12월 16일 하루만" />
-					<a href="javascript:void(0)" class="btn">자세히 보기</a>
-				</div>
-				<div class="swiper-slide">
-					<img src="./images/promotion_slide4.jpg" alt="행사 기간동안 음료 주문시, 모든 디저트 80% 할인! 기간: 2023년 4월 1일 ~ 2024년 4월 1일" />
-					<a href="javascript:void(0)" class="btn">자세히 보기</a>
-				</div>
-				<div class="swiper-slide">
-					<img src="./images/promotion_slide5.jpg" alt="골드 회원 가입시, 따뜻한 코코아를 무료로 드립니다. 기간 2024년 1월 24일 ~ 1월 30일" />
-					<a href="javascript:void(0)" class="btn">자세히 보기</a>
-				</div>
-			</div>
-		</div>
-		<div class="swiper-pagination"></div>
-		<div class="swiper-button-prev">
-			<span class="material-icons">arrow_back</span>
-		</div>
-		<div class="swiper-button-next">
-			<span class="material-icons">arrow_forward</span>
-		</div>
-	</section>
-	<!--REWARDS-->
-	<section class="rewards">
-		<div class="bg-left"></div>
-		<div class="bg-right"></div>
-		<div class="inner">
-			<div class="btn-group">
-				<div class="btn btn--reverse sign-up">회원가입</div>
-				<div class="btn sign-in">로그인</div>
-				<div class="btn gift">e-Gift 선물하기</div>
-			</div>
-		</div>
-	</section>
-	<!--YOUTUBE VIDEO-->
-	<section class="youtube">
-		<div class="youtube__area">
-			<div id="player"></div>
-		</div>
-		<div class="youtube__cover"></div>
-		<div class="inner">
-			<img src="./images/floating1.png" alt="Icon" class="floating1" />
-			<img src="./images/floating2.png" alt="Icon" class="floating2" />
-		</div>
-	</section>
-	<!--SEASON PRODUCT-->
-	<section class="season-product scroll-spy">
-		<div class="inner">
-			<img src="./images/floating3.png" alt="Icon" class="floating3" />
-			<img src="./images/season_product_image.png" alt="" class="product back-to-position to-right" />
-			<div class="text-group">
-				<img src="./images/season_product_text1.png" alt="" class="title back-to-position to-left delay-1" />
-				<img src="./images/season_product_text2.png" alt="" class="description back-to-position to-left delay-1" />
-				<div class="more back-to-position to-left delay-3">
-					<a href="javascript:void(0)" class="btn">자세히 보기</a>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!--RESERVE COFFEE-->
-	<section class="reserve-coffee scroll-spy">
-		<div class="inner">
-			<img src="./images/reserve_logo.png" alt="" class="reserve-logo back-to-position to-right" />
-			<div class="text-group">
-				<img src="./images/reserve_text.png" alt="" class="description back-to-position to-right delay-1" />
-				<div class="more back-to-position to-right delay-2">
-					<a href="javascript:void(0)" class="btn btn--gold">자세히 보기</a>
-				</div>
-			</div>
-			<img src="./images/reserve_image.png" alt="" class="product back-to-position to-left delay-3" />
-		</div>
-	</section>
-	<!--PICK YOUR FAVORITE-->
-	<section class="pick-your-favorite scroll-spy">
-		<div class="inner">
-			<div class="text-group">
-				<img src="./images/favorite_text1.png" alt="" class="title back-to-position to-right" />
-				<img src="./images/favorite_text2.png" alt="" class="description back-to-position to-right delay-1" />
-				<div class="more back-to-position to-right delay-2">
-					<a href="javascript:void(0)" class="btn btn--white">자세히 보기</a>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!--RESERVE STORE-->
-	<section class="reserve-store">
-		<div class="inner">
-			<div class="medal">
-				<div class="front">
-					<img src="./images/reserve_store_medal_front.png" alt="" />
-				</div>
-				<div class="back">
-					<img src="./images/reserve_store_medal_back.png" alt="" />
-					<a href="javascript:void(0)" class="btn">
-						매장안내
-					</a>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!--FIND THE STORE-->
-	<section class="find-store scroll-spy">
-		<div class="inner">
-			<img src="./images/find_store_texture1.png" alt="" class="texture1" />
-			<img src="./images/find_store_texture2.png" alt="" class="texture2" />
-			<img src="./images/find_store_picture1.jpg" alt="" class="picture1 back-to-position to-right" />
-			<img src="./images/find_store_picture2.jpg" alt="" class="picture2 back-to-position to-right delay-1" />
-			<div class="text-group">
-				<img src="./images/find_store_text1.png" alt="" class="title back-to-position to-left" />
-				<img src="./images/find_store_text2.png" alt="" class="description back-to-position to-left delay-1" />
-				<div class="more back-to-position to-left delay-2">
-					<a href="javascript:void(0)" class="btn">매장찾기</a>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!--AWARDS-->
-	<section class="awards">
-		<div class="inner">
-			<div class="swiper">
-				<div class="swiper-wrapper">
-					<div class="swiper-slide">
-						<img src="./images/awards_slide1.jpg" alt="대통령 표창" />
-					</div>
-					<div class="swiper-slide">
-						<img src="./images/awards_slide2.jpg" alt="대통령 표창(3년 연속)" />
-					</div>
-					<div class="swiper-slide">
-						<img src="./images/awards_slide3.jpg" alt="우수사업주 인증" />
-					</div>
-					<div class="swiper-slide">
-						<img src="./images/awards_slide4.jpg" alt="경연대회 대상" />
-					</div>
-					<div class="swiper-slide">
-						<img src="./images/awards_slide5.jpg" alt="대한상의회장상" />
-					</div>
-					<div class="swiper-slide">
-						<img src="./images/awards_slide6.jpg" alt="기업사회공헌 활동 부문" />
-					</div>
-					<div class="swiper-slide">
-						<img src="./images/awards_slide7.jpg" alt="KSI 1위(5년 연속)" />
-					</div>
-					<div class="swiper-slide">
-						<img src="./images/awards_slide8.jpg" alt="KS-SQI 1위(5년 연속)" />
-					</div>
-					<div class="swiper-slide">
-						<img src="./images/awards_slide9.jpg" alt="커피전문점 부문(4년 연속)" />
-					</div>
-					<div class="swiper-slide">
-						<img src="./images/awards_slide10.jpg" alt="동반성장 부문(4년 연속)" />
-					</div>
-				</div>
-			</div>
-			<div class="swiper-button-prev">
-				<span class="material-icons">arrow_back</span>
-			</div>
-			<div class="swiper-button-next">
-				<span class="material-icons">arrow_forward</span>
-			</div>
-		</div>
-	</section>
-	
-<!--FOOTER-->
-<footer>
-  <div class="inner">
-    <ul class="menu">
-      <li><a href="javascript:void(0)" class="orange">개인정보처리방침</a></li>
-      <li><a href="javascript:void(0)">영상정보처리기기 운영관리 방침</a></li>
-      <li><a href="javascript:void(0)">홈페이지 이용약관</a></li>
-      <li><a href="javascript:void(0)">위치정보 이용약관</a></li>
-      <li><a href="javascript:void(0)">카드 이용약관</a></li>
-      <li><a href="javascript:void(0)">윤리경영 핫라인</a></li>
-    </ul>
-    <div class="btn-group">
-      <a href="javascript:void(0)" class="btn btn--white">찾아오시는 길</a>
-      <a href="javascript:void(0)" class="btn btn--white">신규입점제의</a>
-      <a href="javascript:void(0)" class="btn btn--white">사이트 맵</a>
-    </div>
-    <div class="info">
-      <span>사업자등록번호 123-45-678901</span>
-      <span>(주)헤로피커피 코리아</span>
-      <span>TEL : 02) 1234-5678 / FAX : 02) 1234-5678</span>
-      <span>개인정보 책임자 : 박영웅</span>
-    </div>
-    <p class="copyright">
-      &copy; <span class="this-year"></span>
-      Heropy Coffee Company. All Rights Reserved.
-    </p>
-    <img src="images/logo_text.png" alt="HEROPY COFFEE" class="logo" />
-  </div>
 </footer>
-
-<!--TO TOP BUTTON-->
-<div id="to-top">
-  <div class="material-icons">arrow_upward</div>
-</div>
-</body>
-</html>
-</body>
-</html>
