--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
 					<a href="javascript:void(0)" class="btn">자세히 보기</a>
 				</div>
 				<div class="swiper-slide">
-					<img src="./images/promotion_slide5.jpg" alt="골드 회원 가입시, 따뜻한 코코아를 무료로 드립니다. 기간 2024년 1월 24일 ~ 1월 30일" />
+					<img src="./images/promotion_slide5.jpg" alt="골드 회원 가입시, 따뜻한 코코아를 무료로 드립니다. 기간: 2024년 1월 24일 ~ 1월 30일" />
 					<a href="javascript:void(0)" class="btn">자세히 보기</a>
 				</div>
 			</div>
@@ -601,7 +601,7 @@
 			</div>
 		</div>
 	</section>
-	
+</header>	
 <!--FOOTER-->
 <footer>
   <div class="inner">
@@ -636,7 +636,5 @@
 <div id="to-top">
   <div class="material-icons">arrow_upward</div>
 </div>
-</body>
-</html>
 </body>
 </html>
